[package]
name = "dister"
version = "0.1.0"
authors = ["avd <austin.v.davis@gmail.com>"]
edition = "2018"

[dependencies]
failure = "0.1.1"
csv = "1.0.2"
rayon = "1.0.2"
ndarray= "0.12.0"
num = "0.2.0"
itertools = "0.7.8"
ndarray-parallel = "0.9.0"
ndarray-npy = "0.3.0"
structopt = "0.2"
serde = "1.0.81"
serde_derive = "1.0.81"
derive_more = "0.13.0"
rand = "0.6.1"
rand_isaac = "0.1.1"
config = "0.9.1"